force-app/main/default/objects/Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>