force-app/main/default/objects/Note__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes2</relationshipName>
    <type>Lookup</type>
</CustomField>